cluster/core/rook-ceph/rook-ceph/resources/delete-disks.yaml
apiVersion: v1
kind: Pod
metadata:
  name: delete-disks
  namespace: rook-ceph
spec:
  containers:
    - name: disk-nuker
      image: busybox
      command:
        [
          "/bin/sh",
          "-c",
          "dd if=/dev/zero bs=1M count=100 oflag=direct of=/dev/sda",
        ]
      securityContext:
        privileged: true
  nodeName: nuc-1
