cluster/core/rook-ceph/rook-ceph/resources/deployment-toolbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rook-ceph-toolbox
  namespace: rook-ceph
  labels:
    app: rook-ceph-toolbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rook-ceph-toolbox
  template:
    metadata:
      labels:
        app: rook-ceph-toolbox
    spec:
      containers:
        - name: rook-ceph-toolbox
          image: rook/ceph:v1.6.11
          command: ["/tini"]
          args: ["-g", "--", "/usr/local/bin/toolbox.sh"]
          imagePullPolicy: IfNotPresent
          volumes:
            - name: ceph-config
              mountPath: /etc/ceph
            - name: mon-endpoint-volume
              mountPath: /etc/rook
      volumes:
        - name: ceph-config
          emptyDir: {}
        - name: mon-endpoint-volume
          configMap:
            name: rook-ceph-mon-endpoints
            items:
              - key: data
                path: mon-endpoints
