cluster/core/rook-ceph/rook-ceph/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-http
  namespace: rook-ceph
spec:
  hostnames:
    - ceph.btkostner.network
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: rook-ceph-mgr-dashboard
          port: 7000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
